# ElevateTradingBot

./: .env.example  .replit  Procfile  README.md  app.py  app_streamlit.py  basic_demo.py  port_handling.py  pyproject.toml  render.yaml  render_launch.py  replit.nix  requirements.txt  run_preview.py  show_dashboard.py  simple_app.py  streamlit_preview.py
utils/: ai_assistant.py  api_client.py  backtester.py  chart_utils.py  env_loader.py  pattern_recognition.py  performance_tracker.py  strategy.py
