[project]
name = "crypto-trading-bot"
version = "0.1.0"
description = "Cryptocurrency trading bot using break, retest, and liquidity sweep strategies"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "plotly",
    "ccxt",
    "pandas-ta",
    "joblib",
    "openai",
]

[tool.poetry]
name = "crypto-trading-bot"
version = "0.1.0"
description = "Cryptocurrency trading bot using break, retest, and liquidity sweep strategies"
authors = ["Replit User"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "^1.31.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
plotly = "^5.18.0"
ccxt = "^4.2.0"
pandas-ta = "^0.3.14b0"
joblib = "^1.3.2"
openai = "^1.12.0"
