[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crypto-trading-bot"
version = "0.1.0"
description = "Cryptocurrency trading bot using break, retest, and liquidity sweep strategies"
authors = ["Replit User"]
readme = "README.md"
packages = [{include = "utils"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "^1.31.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
plotly = "^5.18.0"
ccxt = "^4.2.0"
pandas-ta = "^0.3.14b0"
joblib = "^1.3.2"
openai = "^1.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
trading-bot = "app:main"
dashboard = "show_dashboard:main"
demo = "basic_demo:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
